--- a/responsiveTest/index.html
+++ b/responsiveTest/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Blank Project</title>
+		<title>Squad Name</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<meta name ="viewpoint" content = "width=device-width, initial-scale-1"> 
 	</head>
 	<body>
-		<h1>Let's get responsive!</h1>
-		<p class="blue_text">What color will I be?</p>
-		<ul>
-			<li>I'm inline-block if I'm on a big screen,</li>
-			<li>but block if the screen is smaller</li>
-		</ul>
+		<h1>404: Squad name does not exist</h1>
+		<img src = "http://i0.kym-cdn.com/photos/images/newsfeed/000/310/157/c31.jpg">
+			<div class="info">
+				<h2>Codice Primum Postea Quaerere</h2>
+				<p class="blue_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+				<ul class="squad-rules">
+					<li>Must wear glasses</li>
+					<li>Flannel</li>
+					<li>Dog lovers</li>
+				</ul>
+			</div>
 	</body>
 </html>
